--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Rezume Free Template by Colorlib</title>
+	<title>Eduardo Saes</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/animate.css">
@@ -29,11 +29,11 @@
 
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-home">Inico</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-about">Sobre mi</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-contact">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -47,8 +47,8 @@
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
-					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Charles Anderson</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Rezume</strong>
+					<h1 class="site-heading site-animate">Hola soy <strong class="d-block">Eduardo Saes</strong></h1>
+					<strong class="d-block text-white text-uppercase letter-spacing">Desarrollador web, full stack</strong>
 
 				</div>
 			</div>
@@ -64,16 +64,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
-					<h2>Featured <strong>Portfolio</strong></h2>
+					<h2>Portafolio <strong>Destacado</strong></h2>
 				</div>
 			</div>
 			<div class="filters">
 				<ul>
-					<li class="active" data-filter="*">All</li>
-					<li data-filter=".packaging">Packaging</li>
-					<li data-filter=".mockup">Mockup</li>
-					<li data-filter=".typography">Typography</li>
-					<li data-filter=".photography">Photography</li>
+					<li class="active" data-filter="*">Todos</li>
+					<li data-filter=".packaging">PHP</li>
+					<li data-filter=".mockup">Vuejs</li>
+					<li data-filter=".typography">Reactjs</li>
+					<li data-filter=".photography">Nodejs</li>
 				</ul>
 			</div>
 
@@ -194,34 +194,13 @@
 			<div class="row">
 				<div class="col-md-12 mb-5">
 					<div class="section-heading text-center">
-						<h2>My <strong>Resume</strong></h2>
+						<h2>Mi <strong>Resumen</strong></h2>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<h2 class="mb-5">Education</h2>
+					<h2 class="mb-5">Eduacacion</h2>
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
 						<h3>Masteral in Information Technology</h3>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
 						<span class="school">New York University</span>
@@ -231,7 +210,7 @@
 				<div class="col-md-6">
 
 
-					<h2 class="mb-5">Experience</h2>
+					<h2 class="mb-5">Experiencia</h2>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
@@ -275,14 +254,13 @@
 				</div>
 				<div class="col-lg-5 pl-lg-5">
 					<div class="section-heading">
-						<h2>About <strong>Me</strong></h2>
+						<h2>Sobre <strong>Mi</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p class="lead">Desarrollador web fullStack con mas de 4 años de experiecia en el desarrollo de aplicaciones con php y mas de 1 año con el udo de javascript</p>
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contratame</a>
 					</p>
 				</div>
 			</div>
@@ -291,7 +269,7 @@
 		</div>
 	</section>
 
-	<section class="site-section">
+	<!-- <section class="site-section">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-12">
@@ -357,7 +335,7 @@
 
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<section class="site-section pb-0"  id="section-services">
@@ -366,7 +344,7 @@
 			<div class="row mb-4">
 				<div class="col-md-12">
 					<div class="section-heading text-center">
-						<h2>My <strong>Services</strong></h2>
+						<h2>Mis <strong>Servicios</strong></h2>
 					</div>
 				</div>
 			</div>
@@ -377,12 +355,12 @@
 						<span class="icon">
 							<span class="icon-browser2"></span>
 						</span>
-						<h3 class="mb-4">Web Design</h3>
+						<h3 class="mb-4">Desarrollo web</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
 					</div>
 				</div>
-				<div class="col-md-6 col-lg-4 text-center mb-5">
+				<!-- <div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
 							<span class="icon-presentation"></span>
@@ -401,7 +379,7 @@
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
 					</div>
-				</div>
+				</div> -->
 
 				
 
@@ -411,7 +389,7 @@
 
 
 	
-
+<!-- 
 	<section class="site-section" id="section-blog">
 		<div class="container">
 			<div class="row">
@@ -470,57 +448,33 @@
 
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="site-section" id="section-contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 mb-5">
 					<div class="section-heading text-center">
-						<h2>Get <strong>In Touch</strong></h2>
+						<h2>Ponerse <strong>En contacto</strong></h2>
 					</div>
 				</div>
 
-				<div class="col-md-7 mb-5 mb-md-0">
-					<form action="" class="site-form">
-						<h3 class="mb-5">Get In Touch</h3>
-						<div class="form-group">
-							<input type="text" class="form-control px-3 py-4" placeholder="Your Name">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Email">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Phone">
-						</div>
-						<div class="form-group mb-5">
-							<textarea class="form-control px-3 py-4"cols="30" rows="10" placeholder="Write a Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" class="btn btn-primary  px-4 py-3" value="Send Message">
-						</div>
-					</form>
-				</div>
-				<div class="col-md-5 pl-md-5">
-					<h3 class="mb-5">My Contact Details</h3>
+				<div class="col-md-12 pl-md-12">
+					<h3 class="mb-5">Mis Datos de Contacto</h3>
 					<ul class="site-contact-details">
 						<li>
-							<span class="text-uppercase">Email</span>
-							site@gmail.com
+							<span class="text-uppercase">Correo</span>
+							eduardoargenis383@gmail.com
 						</li>
 						<li>
-							<span class="text-uppercase">Phone</span>
-							+30 976 1382 9921
+							<span class="text-uppercase">Telefono</span>
+							+58 424 721 7245
 						</li>
 						<li>
-							<span class="text-uppercase">Fax</span>
-							+30 976 1382 9922
-						</li>
-						<li>
-							<span class="text-uppercase">Address</span>
-							San Francisco, CA <br>
-							4th Floor8 Lower  <br>
-							San Francisco street, M1 50F
+							<span class="text-uppercase">Direcion</span>
+							Venezuela <br>
+							Sector Campo de oro calle 1  <br>
+							Mérida, 5101
 						</li>
 					</ul>
 				</div>
