edit text information

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-heading text-center col-md-12">
-					<h2>Portafolio <strong>Destacado</strong></h2>
+					<h2>Desarrollos <strong>Destacado</strong></h2>
 				</div>
 			</div>
 			<div class="filters">
@@ -256,7 +256,7 @@
 					<div class="section-heading">
 						<h2>Sobre <strong>Mi</strong></h2>
 					</div>
-					<p class="lead">Desarrollador web fullStack con mas de 4 años de experiecia en el desarrollo de aplicaciones con php y mas de 1 año con el udo de javascript</p>
+					<p class="lead">Desarrollador web fullStack con mas de 4 años de experiecia en el desarrollo de aplicaciones con php y mas de 1 año con el uso de javascript</p>
 					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
 					<p>
@@ -350,12 +350,12 @@
 			</div>
 			<div class="row">
 
-				<div class="col-md-6 col-lg-4 text-center mb-5">
+				<div class="col-md-12 col-lg-12 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
 							<span class="icon-browser2"></span>
 						</span>
-						<h3 class="mb-4">Desarrollo web</h3>
+						<h3 class="mb-4">Full stack PHP</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
 					</div>
@@ -464,6 +464,10 @@
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Correo</span>
+							eduardoargenis383@gmail.com
+						</li>
+						<li>
+							<span class="text-uppercase">Linkedin</span>
 							eduardoargenis383@gmail.com
 						</li>
 						<li>
