--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 			<div class="row">
 
 				<div class="col-md-12 col-lg-12 text-center mb-5">
-					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+					<div class=" col-md-6 col-lg-4site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
 							<span class="icon-browser2"></span>
 						</span>
