--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 			<div class="row">
 
 				<div class="col-md-12 col-lg-12 text-center mb-5">
-					<div class=" col-md-6 col-lg-4site-service-item site-animate" data-animate-effect="fadeIn">
+					<div class=" col-md-6 col-lg-4 site-service-item site-animate" data-animate-effect="fadeIn">
 						<span class="icon">
 							<span class="icon-browser2"></span>
 						</span>
@@ -382,6 +382,86 @@
 				</div> -->
 
 				
+
+			</div>
+		</div>
+	</section>
+
+	<section class="site-section pb-0"  id="section-services">
+		<div class="container">
+
+			<div class="row mb-4">
+				<div class="col-md-12">
+					<div class="section-heading text-center">
+						<h2>Mis <strong>Skills</strong></h2>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Laravel</span>
+						</span>
+					</div>
+				</div>				
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Nodejs</span>
+						</span>
+					</div>
+				</div>
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Mysql</span>
+						</span>
+					</div>
+				</div>
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">MongoDB</span>
+						</span>
+					</div>
+				</div>
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Vuejs</span>
+						</span>
+					</div>
+				</div>
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Reactjs</span>
+						</span>
+					</div>
+				</div>
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Angular</span>
+						</span>
+					</div>
+				</div>
+
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span class="icon">
+							<span class="">Bootstrap</span>
+						</span>
+					</div>
+				</div>
 
 			</div>
 		</div>
@@ -468,7 +548,7 @@
 						</li>
 						<li>
 							<span class="text-uppercase">Linkedin</span>
-							eduardoargenis383@gmail.com
+							<a href="www.linkedin.com/in/eduardosaes">eduardosaes</a>
 						</li>
 						<li>
 							<span class="text-uppercase">Telefono</span>
