--- a/index.html
+++ b/index.html
@@ -427,37 +427,47 @@
 				</div>
 
 				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<span>MongoDB</span>
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn"></div>
+						<span><h4>MongoDB</h4></span>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
+						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<span>Vuejs</span>
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn"></div>
+						<span><h4>Vuejs</h4></span>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
+						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<span>Reactjs</span>
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn"></div>
+						<span><h4>Reactjs</h4></span>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
+						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<span>Angular</span>
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn"></div>
+						<span><h4>Angular</h4></span>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
+						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<span>Bootstrap</span>
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70"></div>
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn"></div>
+						<span><h4>Bootstrap</h4></span>
+						<div class="progress">
+							<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70"></div>
+						</div>
 					</div>
 				</div>
 
